added workflow; improved pom